--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <h1>Hi! I'm Erica!!!</h1>
+  <head>
+    <title style="font:Helvetica">
+             <strong>All About 
+  </head>
+  <body>
+  </body>
 </html>
