--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title style="font:Helvetica">
-             <strong>All About 
+    <title>Explore Erica!</title>           
   </head>
   <body>
+    <h1 style="font:Helvetica","color:black">All About Me:<em>Erica Edition</em>
   </body>
 </html>
