--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,6 @@
     <title>Explore Erica!</title>           
   </head>
   <body>
-    <h1 style="font:Helvetica","color:black">All About Me:<em>Erica Edition</em>
+    <h1 style="font:Helvetica","color:black">All About Me:<em>Erica Edition</em></h1>
   </body>
 </html>
