--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,7 @@
     <title>Explore Erica!</title>           
   </head>
   <body>
-    <h1 style="font:Helvetica","color:black">All About Me:<em>Erica Edition</em></h1>
+    <center><h1 style="color:black">All About Me:<em> Erica Edition</em></h1></center>
+    <p> Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can find me singing
   </body>
 </html>
