--- a/code4.html
+++ b/code4.html
@@ -48,7 +48,7 @@
         <tr>
         <td><b>Variables</b></td>
           <td> Something that is named and has a changing value or stores values. </td>
-          <td>  </td>
+          <td> When you select ice cream and which flavor you want. </td>
           <td>  </td>
           <td>  </td>
         </tr>
@@ -57,7 +57,7 @@
         <tr>
           <td><b>Loops</b></td>
           <td> A block of code that repeats. </td>
-          <td>  </td>
+          <td> When you shampoo and condition in the shower. </td>
           <td>  </td>
           <td>  </td>
         </tr>
@@ -66,7 +66,7 @@
         <tr>
           <td><b>Conditionals</b></td>
           <td> A block that enables choice to execute. </td>
-          <td>  </td>
+          <td> If you walk your dog, then she/he will go to the bathroom. </td>
           <td>  </td>
           <td>  </td>
         </tr>
