--- a/core4.html
+++ b/core4.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
 
     <style>
+
       body{
         color: inherit;
         font-family: 'Open Sans', sans-serif;
       }
+
       table, th, td{
         border: 2px solid #01426a;
         border-collapse: collapse;
@@ -18,10 +20,12 @@
         vertical-align: middle;
         color: #01426a
       }
+
       th  {
         background-color: #ece81a
       }
       tr:hover {background-color: #ece81a}
+
     </style>
   </head>
 
@@ -44,36 +48,36 @@
         <tr>
         <td><b>Variables</b></td>
           <td> Something that is named and has a changing value or stores values. </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> When you select ice cream and which flavor you want. </td>
+          <td> a=5 </td>
+          <td> Rounded corner blocks </td>
         </tr>
 
         <!-- Fill in the row for Loops -->
         <tr>
           <td><b>Loops</b></td>
           <td> A block of code that repeats. </td>
+          <td> When you shampoo and condition in the shower. </td>
           <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> Repeat block </td>
         </tr>
 
         <!-- Fill in the row for Conditionals -->
         <tr>
           <td><b>Conditionals</b></td>
           <td> A block that enables choice to execute. </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> If you walk your dog, then she/he will go to the bathroom. </td>
+          <td> 5=5; True </td>
+          <td> If block </td>
         </tr>
 
         <!-- Fill in the row for Functions -->
         <tr>
           <td><b>Functions</b></td>
           <td> A chunk of code that is reussed to make the same thing happen. </td>
+          <td> Use the same recipe to cook one meal. </td>
           <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> Define block </td>
         </tr>
 
       </table>
@@ -81,3 +85,4 @@
     
   </body>
 </html>
+
