--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <center><h1 style="color:black">All About Me:<em> Erica Edition</em></h1></center>
+    <center><img src="http://bit.ly/2u1EQZr" style=width:304px;height:228px"></center>
     <p> Some might say that I'm crazy, wild, and fun and others might say that I'm quiet,
-      reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, or 
+      reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, or </p>
   </body>
 </html>
