--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,23 @@
   <body>
     <center><h1 style="color:black">All About Me:<em> Erica Edition</em></h1></center>
     <center><img src="http://bit.ly/2u1EQZr" style=width:304px;height:228px"></center>
-    <p> Some might say that I'm crazy, wild, and fun and others might say that I'm quiet,
-      reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, or </p>
+      <p1> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
+      Some might say that I'm crazy, wild, and fun and others might say that I'm quiet,
+      reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways.
+      You can either find me singing, sleeping, eating, or walking or hiking to my next adventure. 
+      I love dogs and long walks on the beach.  </p1>
+     <center><h2 style="color:black"><em> Likes </em></h2></center>
+      <ul>
+        <li> Dogs <li>
+        <li> Cats <li>
+        <li> Fruit <li>
+        <li> Jokes <li>
+        <li> Beaches <li>
+        <li> Movies <li>
+        <li> Binge-watching on Netflix <li>
+        <li> Long walks or drives <li>
+        <li> Photography <li> 
+        <li> Spiderman <li>
+        
   </body>
 </html>
