--- a/aboutme.html
+++ b/aboutme.html
@@ -13,16 +13,16 @@
       I love dogs and long walks on the beach.  </p1>
      <center><h2 style="color:black"><em> Likes </em></h2></center>
       <ul>
-        <li> Dogs <li>
-        <li> Cats <li>
-        <li> Fruit <li>
-        <li> Jokes <li>
-        <li> Beaches <li>
-        <li> Movies <li>
-        <li> Binge-watching on Netflix <li>
-        <li> Long walks or drives <li>
-        <li> Photography <li> 
-        <li> Spiderman <li>
-        
+        <li> Dogs </li>
+        <li> Cats </li>
+        <li> Fruit </li>
+        <li> Jokes </li>
+        <li> Beaches </li>
+        <li> Movies </li>
+        <li> Binge-watching on Netflix </li>
+        <li> Long walks or drives </li>
+        <li> Photography </li> 
+        <li> Spiderman </li>
+      </ul>
   </body>
 </html>
