--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
   <p> My perception on robots did not change from today because I am still in debate to myself whether or not robots are safe 
   and good for society and human nature. I hope that robots can help us with accessibility in the future. I'm nervous that most people will
   take advantage of robots and they will rely on it so much that robots will become apart of society. Our circuits worked well and we were able
-  to explain how each of the parts worked to make the circuit worked. I wish we could more with the circuits.
+  to explain how each of the parts worked to make the circuit worked. I wish we could more with the circuits. </p>
   
   </body>
   </html>
