--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
       reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways.
       You can either find me singing, sleeping, eating, or walking or hiking to my next adventure. 
       I love dogs and long walks on the beach.  </p1>
-     <center><h2 style="color:black"><em> Likes </em></h2></center>
+     <center><h2 style="color:black">Likes</h2></center>
       <ul>
         <li> Dogs </li>
         <li> Cats </li>
@@ -20,6 +20,21 @@
         <li> Beaches </li>
         <li> Movies </li>
         <li> Binge-watching on Netflix </li>
+        <li> Long walks or drives </li>
+        <li> Photography </li> 
+        <li> Spiderman </li>
+        <li> Writing </li>
+        <li> Hikes </li>
+      </ul>
+      <center><h2 style="color:black">Dislikes</h2></center>
+      <ul>
+        <li> When styrofoam is rubbed together </li>
+        <li> Heights (Falling) </li>
+        <li> Scary movies </li>
+        <li> Jump scares </li>
+        <li> People interrupting me </li>
+        <li> People (:]) </li>
+        <li>  </li>
         <li> Long walks or drives </li>
         <li> Photography </li> 
         <li> Spiderman </li>
