--- a/core4.html
+++ b/core4.html
@@ -49,25 +49,25 @@
         <td><b>Variables</b></td>
           <td> Something that is named and has a changing value or stores values. </td>
           <td> When you select ice cream and which flavor you want. </td>
-          <td> a=5 </td>
+          <td> a == 5 </td>
           <td> Rounded corner blocks </td>
         </tr>
 
         <!-- Fill in the row for Loops -->
         <tr>
           <td><b>Loops</b></td>
-          <td> A block of code that repeats. </td>
+          <td> A sequence of instruction that repeats until a certain condition is reached. </td>
           <td> When you shampoo and condition in the shower. </td>
-          <td>  </td>
+          <td> for gallon in range(10) add gallon to bucket </td>
           <td> Repeat block </td>
         </tr>
 
         <!-- Fill in the row for Conditionals -->
         <tr>
           <td><b>Conditionals</b></td>
-          <td> A block that enables choice to execute. </td>
-          <td> If you walk your dog, then she/he will go to the bathroom. </td>
-          <td> 5=5; True </td>
+          <td> A block that enables choice to execute on boolean condition evaluates to true or false. </td>
+          <td> If you walk your dog, then she/he will go to the bathroom, otherwise it'll keep walking. </td>
+          <td> if i<9: print(alphabet) elif i==9: print(9) else: print("I see you.") </td>
           <td> If block </td>
         </tr>
 
