--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
   <html>
   <body>
-  <p><em>Date: July 7th, 2017</em></p>
-  
-  <p> My perception on robots did not change from today because I am still in debate to myself whether or not robots are safe 
+  <p><em>Date: July 10th, 2017</em></p>
+    <p> My perception on robots did not change from today because I am still in debate to myself whether or not robots are safe 
   and good for society and human nature. I hope that robots can help us with accessibility in the future. I'm nervous that most people will
   take advantage of robots and they will rely on it so much that robots will become apart of society. Our circuits worked well and we were able
   to explain how each of the parts worked to make the circuit worked. I wish we could more with the circuits. </p>
+    
+  <p><em>Date: July 11th, 2017</em></p>
+    <p> What I really like about this program is that I feel like I am more open to meeting and talking to more people, generally because I work
+      better with girls. I also admire the speakers and mentors that help me get a better image on what I want to do in the future. </p>
   
   </body>
   </html>
