--- a/aboutme.html
+++ b/aboutme.html
@@ -5,19 +5,19 @@
   </head>
   <body>
     <center><h1 style="color:black">All About Me:<em> Erica Edition</em></h1></center>
-    <center><img src="http://bit.ly/2u1EQZr" style=width:304px;height:228px"></center>
+    <center><img src="http://bit.ly/2u1EQZr" "style=width:304px;height:228px"></center>
       <p1> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
       Some might say that I'm crazy, wild, and fun and others might say that I'm quiet,
       reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways.
       You can either find me singing, sleeping, eating, or walking or hiking to my next adventure. 
       I love dogs and long walks on the beach.  </p1>
-     <center><h2 style="color:black">Likes</h2></center>
+     <center><h2 style="color:black">Things I Enjoy</h2></center>
       <ul>
         <li> Dogs </li>
         <li> Cats </li>
         <li> Fruit </li>
         <li> Jokes </li>
-        <li> Beaches </li>
+        <li> Beaches (Half Moon Bay, Monterey) </li>
         <li> Movies </li>
         <li> Binge-watching on Netflix </li>
         <li> Long walks or drives </li>
@@ -25,8 +25,14 @@
         <li> Spiderman </li>
         <li> Writing </li>
         <li> Hikes </li>
+        <li> Irony </li>
+        <li> San Francisco </li>
+        <li> Sleeping </li>
+        <li> Boba </li>
+        <li> Rain </li>
+        <li> Korean Dramas </li>
       </ul>
-      <center><h2 style="color:black">Dislikes</h2></center>
+      <center><h2 style="color:black">What Grinds My Gears</h2></center>
       <ul>
         <li> When styrofoam is rubbed together </li>
         <li> Heights (Falling) </li>
@@ -34,10 +40,21 @@
         <li> Jump scares </li>
         <li> People interrupting me </li>
         <li> People (:]) </li>
-        <li>  </li>
-        <li> Long walks or drives </li>
-        <li> Photography </li> 
-        <li> Spiderman </li>
+        <li> Closed spaces or elevators </li>
+        <li> When your friend flakes on the day of </li>
+        <li> People irritating me </li> 
+        <li> When dogs lick you and you just washed your face </li>
+        <li> When people wear yellow </li>
+      </ul>
+<center><h2 style="color:black">Websites I enjoy to go on (sometimes)</h2></center>
+            <ul>
+        <li> www.youtube.com </li>
+        <li> www.netflix.com/browse </li>
+        <li> www.facebook.com </li>
+        <li> www.instagram.com </li>
+        <li> www.tumblr.com </li>
+        <li> www.pinterest.com </li>
+        <li> www.amazon.com </li>
       </ul>
   </body>
 </html>
