--- a/aboutme.html
+++ b/aboutme.html
@@ -31,6 +31,7 @@
         <li> Boba </li>
         <li> Rain </li>
         <li> Korean Dramas </li>
+      <li> Traveling </li>
       </ul>
       <center><h2 style="color:black">What Grinds My Gears</h2></center>
       <ul>
@@ -46,15 +47,15 @@
         <li> When dogs lick you and you just washed your face </li>
         <li> When people wear yellow </li>
       </ul>
-<center><h2 style="color:black">Websites I enjoy to go on (sometimes)</h2></center>
+<center><h2 style="color:black">Websites I Enjoy To Go On (sometimes)</h2></center>
             <ul>
-        <li> www.youtube.com </li>
-        <li> www.netflix.com/browse </li>
-        <li> www.facebook.com </li>
-        <li> www.instagram.com </li>
-        <li> www.tumblr.com </li>
-        <li> www.pinterest.com </li>
-        <li> www.amazon.com </li>
+        <li><a href="www.youtube.com">Youtube</a></li>
+        <li><a href="www.netflix.com/browse">Netflix</a></li>
+        <li><a href="www.facebook.com">Facebook</a></li>
+        <li><a href="www.instagram.com">Instagram</a></li>
+        <li><a href="www.tumblr.com">Tumblr</a></li>
+        <li><a href="www.pinterest.com">Pinterest</a></li>
+        <li><a href="www.amazon.com">Amazon</a></li>
       </ul>
   </body>
 </html>
