--- a/aboutme.html
+++ b/aboutme.html
@@ -49,13 +49,13 @@
       </ul>
 <center><h2 style="color:black">Websites I Enjoy To Go On (sometimes)</h2></center>
             <ul>
-        <li><a href="www.youtube.com">Youtube</a></li>
-        <li><a href="www.netflix.com/browse">Netflix</a></li>
-        <li><a href="www.facebook.com">Facebook</a></li>
-        <li><a href="www.instagram.com">Instagram</a></li>
-        <li><a href="www.tumblr.com">Tumblr</a></li>
-        <li><a href="www.pinterest.com">Pinterest</a></li>
-        <li><a href="www.amazon.com">Amazon</a></li>
+        <li><a href="https://www.youtube.com">Youtube</a></li>
+        <li><a href="https://www.netflix.com/browse">Netflix</a></li>
+        <li><a href="https://www.facebook.com">Facebook</a></li>
+        <li><a href="https://www.instagram.com">Instagram</a></li>
+        <li><a href="https://www.tumblr.com">Tumblr</a></li>
+        <li><a href="https://www.pinterest.com">Pinterest</a></li>
+        <li><a href="https://www.amazon.com">Amazon</a></li>
       </ul>
   </body>
 </html>
