--- a/aboutme.html
+++ b/aboutme.html
@@ -3,16 +3,16 @@
   <head>
     <title>Explore Erica!</title>           
   </head>
-  <body>
-    <center><h1 style="color:black">All About Me:<em> Erica Edition</em></h1></center>
+  <body style="background-color:#228b22;">
+    <center><h1 style="color:black","font-family: Helvetica;">All About Me:<em> Erica Edition</em></h1></center>
     <center><img src="http://bit.ly/2u1EQZr" style=width:200px;height:200px"></center>
-      <p1> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
+      <p style="font-family: Helvetica;"> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
       Some might say that I'm crazy, wild, and fun and others might say that I'm quiet,
       reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways.
       You can either find me singing, sleeping, eating, or walking or hiking to my next adventure. 
-      I love dogs and long walks on the beach.  </p1>
-     <center><h2 style="color:black">Things I Enjoy</h2></center>
-      <ul>
+      I love dogs and long walks on the beach.  </p>
+     <center><h2 style="color:black","font-family: Helvetica;">Things I Enjoy</h2></center>
+      <ul style="font-family: Helvetica;">
         <li> Dogs </li>
         <li> Cats </li>
         <li> Fruit </li>
@@ -33,8 +33,8 @@
         <li> Korean Dramas </li>
       <li> Traveling </li>
       </ul>
-      <center><h2 style="color:black">What Grinds My Gears</h2></center>
-      <ul>
+      <center><h2 style="color:black","font-family: Helvetica;">What Grinds My Gears</h2></center>
+      <ul style="font-family: Helvetica;">
         <li> When styrofoam is rubbed together </li>
         <li> Heights (Falling) </li>
         <li> Scary movies </li>
@@ -47,8 +47,8 @@
         <li> When dogs lick you and you just washed your face </li>
         <li> When people wear yellow </li>
       </ul>
-<center><h2 style="color:black">Websites I Enjoy To Go On (sometimes)</h2></center>
-            <ul>
+<center><h2 style="color:black","font-family: Helvetica;">Websites I Enjoy To Go On (sometimes)</h2></center>
+            <ul style="font-family: Helvetica;">
         <li><a href="https://www.youtube.com">Youtube</a></li>
         <li><a href="https://www.netflix.com/browse">Netflix</a></li>
         <li><a href="https://www.facebook.com">Facebook</a></li>
