--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <head>
     <title>Explore Erica!</title>           
   </head>
-  <body style="background-color:#228b22;">
+  <body style="background-color:#DFC7F3;">
     <center><h1 style="color:black","font-family:Helvetica">All About Me:<em> Erica Edition</em></h1></center>
     <center><img src="http://bit.ly/2u1EQZr" style=width:200px;height:200px"></center>
       <p style="font-family: Helvetica;"> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
