--- a/aboutme.html
+++ b/aboutme.html
@@ -4,11 +4,11 @@
     <title>Explore Erica!</title>           
   </head>
   <body style="background-color:#DFC7F3;">
-<center><h1 style="color:white;""font-family:helvetica;">All About Me:<em> Erica Edition</em></h1></center>
+<center><h1 style="font-family:helvetica;">All About Me:<em> Erica Edition</em></h1></center>
 <center><img src="http://bit.ly/2u1EQZr" style=width:200px;height:200px"></center>
-      <p style="color:white;"> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, or walking or hiking to my next adventure. I love dogs and long walks on the beach.  </p>
-<center><h2 style="color:white;""font-family:helvetica;">Things I Enjoy</h2></center>
-      <ul style="color:white;""font-family:helvetica;">
+      <p style="font-familu:helvetica;"> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, or walking or hiking to my next adventure. I love dogs and long walks on the beach.  </p>
+<center><h2 style="font-family:helvetica;">Things I Enjoy</h2></center>
+      <ul style="font-family:helvetica;">
         <li> Dogs </li>
         <li> Cats </li>
         <li> Fruit </li>
@@ -29,8 +29,8 @@
         <li> Korean Dramas </li>
       <li> Traveling </li>
       </ul>
-      <center><h2 style="color:white;","font-family:helvetica;">What Grinds My Gears</h2></center>
-      <ul style="color:white;" "font-family:helvetica;">
+      <center><h2 style="font-family:helvetica;">What Grinds My Gears</h2></center>
+      <ul style="font-family:helvetica;">
         <li> When styrofoam is rubbed together </li>
         <li> Heights (Falling) </li>
         <li> Scary movies </li>
@@ -45,8 +45,8 @@
           <li> Confrontation </li>
   <li> Rejection </li>
       </ul>
-<center><h2 style="color:white;">Websites I Enjoy To Go On (sometimes)</h2></center>
-            <ul style="color:white;">
+<center><h2 style="font-family:helvetica;">Websites I Enjoy To Go On (sometimes)</h2></center>
+            <ul style="font-family:helvetica;">
         <li><a href="https://www.youtube.com">Youtube</a></li>
         <li><a href="https://www.netflix.com/browse">Netflix</a></li>
         <li><a href="https://www.facebook.com">Facebook</a></li>
