--- a/blog.html
+++ b/blog.html
@@ -11,5 +11,9 @@
     <p> What I really like about this program is that I feel like I am more open to meeting and talking to more people, generally because I work
       better with girls. I also admire the speakers and mentors that help me get a better image on what I want to do in the future. </p>
   
+    <p><em>Date: July 12th, 2017</em></p>
+    <p> Both innovators desire to help the human population in a wat that they don't have to do it themselves. Both of them also worked with human interation with robots. Some of us worked on the code and
+      others worked on the robot itself. We worked together to get the lights to work. I wish we were able to add more lights. Pins have to be named. </p>
+  
   </body>
   </html>
