--- a/aboutme.html
+++ b/aboutme.html
@@ -44,6 +44,7 @@
         <li> When people wear yellow </li>
           <li> Confrontation </li>
   <li> Rejection </li>
+  <li> When you microwave your soup and it's cold because you gotta mix it in between the intervals </li>
       </ul>
 <center><h2 style="font-family:helvetica;">Websites I Enjoy To Go On (sometimes)</h2></center>
             <ul style="font-family:helvetica;">
@@ -55,5 +56,6 @@
         <li><a href="https://www.pinterest.com">Pinterest</a></li>
         <li><a href="https://www.amazon.com">Amazon</a></li>
       </ul>
+  <p><center><b> FUN FACT: I like tea </b></center></p>
   </body>
 </html>
