--- a/aboutme.html
+++ b/aboutme.html
@@ -9,42 +9,42 @@
       <p style="font-family:helvetica;"> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, or walking or hiking to my next adventure. I love dogs and long walks on the beach.  </p>
 <center><h2 style="font-family:helvetica;">Things I Enjoy</h2></center>
       <ul style="font-family:helvetica;">
-        <li> Dogs </li>
-        <li> Cats </li>
-        <li> Fruit </li>
-        <li> Jokes </li>
-        <li> Beaches (Half Moon Bay, Monterey) </li>
-        <li> Movies </li>
-        <li> Binge-watching on Netflix </li>
-        <li> Long walks or drives </li>
-        <li> Photography </li> 
-        <li> Spiderman </li>
-        <li> Writing </li>
-        <li> Hikes </li>
-        <li> Irony </li>
-        <li> San Francisco </li>
-        <li> Sleeping </li>
-        <li> Boba </li>
-        <li> Rain </li>
-        <li> Korean Dramas </li>
-      <li> Traveling </li>
+        <li><small> Dogs </small></li>
+        <li><small> Cats </small></li>
+        <li><small> Fruit </small></li>
+        <li><small> Jokes </small></li>
+        <li><small> Beaches (Half Moon Bay, Monterey) </small></li>
+        <li><small> Movies </small></li>
+        <li><small> Binge-watching on Netflix </small></li>
+        <li><small> Long walks or drives </small></li>
+        <li><small> Photography </small></li> 
+        <li><small> Spiderman </small></li>
+        <li><small> Writing </small></li>
+        <li><small> Hikes </small></li>
+        <li><small> Irony </small></li>
+        <li><small> San Francisco </small></li>
+        <li><small> Sleeping </small></li>
+        <li><small> Boba </small></li>
+        <li><small> Rain </small></li>
+        <li><small> Korean Dramas </small></li>
+      <li><small> Traveling </small></li>
       </ul>
       <center><h2 style="font-family:helvetica;">What Grinds My Gears</h2></center>
       <ul style="font-family:helvetica;">
-        <li> When styrofoam is rubbed together </li>
-        <li> Heights (Falling) </li>
-        <li> Scary movies </li>
-        <li> Jump scares </li>
-        <li> People interrupting me </li>
-        <li> People (:]) </li>
-        <li> Closed spaces or elevators </li>
-        <li> When your friend flakes on the day of </li>
-        <li> People irritating me </li> 
-        <li> When dogs lick you and you just washed your face </li>
-        <li> When people wear yellow </li>
-          <li> Confrontation </li>
-  <li> Rejection </li>
-  <li> When you microwave your soup and it's cold because you gotta mix it in between the intervals </li>
+        <li><small> When styrofoam is rubbed together </small></li>
+        <li><small> Heights (Falling) </small></li>
+        <li><small> Scary movies </small></li>
+        <li><small> Jump scares </small></li>
+        <li><small> People interrupting me </small></li>
+        <li><small> People (:]) </small></li>
+        <li><small> Closed spaces or elevators </small></li>
+        <li><small> When your friend flakes on the day of </small></li>
+        <li><small> People irritating me </small></li> 
+        <li><small> When dogs lick you and you just washed your face </small></li>
+        <li><small> When people wear yellow </small></li>
+          <li><small> Confrontation </small></li>
+  <li><small> Rejection </small> </li>
+  <li><small> When you microwave your soup and it's cold because you gotta mix it in between the intervals</small> </li>
       </ul>
 <center><h2 style="font-family:helvetica;">Websites I Enjoy To Go On (sometimes)</h2></center>
             <ul style="font-family:helvetica;">
@@ -56,6 +56,6 @@
         <li><a href="https://www.pinterest.com">Pinterest</a></li>
         <li><a href="https://www.amazon.com">Amazon</a></li>
       </ul>
-  <p style="fony-family:helvetica;"><center><strong> FUN FACT: I like tea </strong></center></p>
+  <p style="fony-family:helvetica;"><center><strong>FUN FACT: I like tea!</strong></center></p>
   </body>
 </html>
