--- a/aboutme.html
+++ b/aboutme.html
@@ -4,10 +4,10 @@
     <title>Explore Erica!</title>           
   </head>
   <body style="background-color:#DFC7F3;">
-<center><h1 style="font-family:helvetica;>All About Me:<em>Erica Edition</em></h1></center>
+<center><h1 style="font-family:helvetica;">All About Me:<em>Erica Edition</em></h1></center>
 <center><img src="http://bit.ly/2u1EQZr" style=width:200px;height:200px"></center>
       <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, or walking or hiking to my next adventure. I love dogs and long walks on the beach.  </p>
-<center><h2>Things I Enjoy</h2></center>
+<center><h2 style="font-family:helvetica;">Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
         <li><small> Cats </small></li>
@@ -29,7 +29,7 @@
         <li><small> Korean Dramas </small></li>
       <li><small> Traveling </small></li>
       </ul>
-      <center><h2>What Grinds My Gears</h2></center>
+      <center><h2 style="font-family:helvetica;">What Grinds My Gears</h2></center>
       <ul>
         <li><small> When styrofoam is rubbed together </small></li>
         <li><small> Heights (Falling) </small></li>
@@ -46,7 +46,7 @@
   <li><small> Rejection </small> </li>
   <li><small> When you microwave your soup and it's cold because you gotta mix it in between the intervals</small> </li>
       </ul>
-<center><h2>Websites I Enjoy To Go On (sometimes)</h2></center>
+<center><h3 style="font-family:helvetica;">Websites I Enjoy To Go On (sometimes)</h3></center>
             <ul>
         <li><a href="https://www.youtube.com">Youtube</a></li>
         <li><a href="https://www.netflix.com/browse">Netflix</a></li>
