--- a/aboutme.html
+++ b/aboutme.html
@@ -56,6 +56,6 @@
         <li><a href="https://www.pinterest.com">Pinterest</a></li>
         <li><a href="https://www.amazon.com">Amazon</a></li>
       </ul>
-  <p style="font-family:helvetica;"><center><strong>FUN FACT: I like tea!</strong></center></p>
+  <p><center style="font-family:helvetica;"><strong>FUN FACT: I like tea!</strong></center></p>
   </body>
 </html>
