--- a/aboutme.html
+++ b/aboutme.html
@@ -6,15 +6,16 @@
   <body style="background-color:#DFC7F3;">
 <center style="font-family:helvetica;"><h1>All About Me:<em>Erica Edition</em></h1></center>
 <center><img src="http://bit.ly/2u1EQZr" style=width:200px;height:200px"></center>
-      <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, or walking or hiking to my next adventure. I love dogs and long walks on the beach.  </p>
+      <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, walking or hiking to my next adventure. I love dogs and long walks on the beach.  </p>
 <center><h2 style="font-family:helvetica;">Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
         <li><small> Cats </small></li>
-        <li><small> Fruit </small></li>
+        <li><small> Fresh Fruit </small></li>
         <li><small> Jokes </small></li>
         <li><small> Beaches (Half Moon Bay, Monterey) </small></li>
         <li><small> Movies </small></li>
+  <li> <small> Music </small></li>
         <li><small> Binge-watching on Netflix </small></li>
         <li><small> Long walks or drives </small></li>
         <li><small> Photography </small></li> 
@@ -44,6 +45,8 @@
         <li><small> When people wear yellow </small></li>
           <li><small> Confrontation </small></li>
   <li><small> Rejection </small> </li>
+  <li> When you get ready for a shower but you hear someone else get in </li>
+  <li> When you come into class really late and the whole class stares at you </li>
   <li><small> When you microwave your soup and it's cold because you gotta mix it in between the intervals</small> </li>
       </ul>
 <center><h3 style="font-family:helvetica;">Websites I Enjoy To Go On (sometimes)</h3></center>
