--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Explore Erica!</title>           
+    <title>Explore Erica!</title>    
+    <style>
+      body {background-color:"DFC7F3;}
+      h1 {font-family:helvetica;}
+      p {font-family:helvetica;}
+      h2 {font-family:helvetica;}
+      ul {font-family:helvetica;}
+      h3 {font-family:helvetica;}
   </head>
-  <body style="background-color:#DFC7F3;">
-<center style="font-family:helvetica;font-size:64;"><h1>All About Me:<em>Erica Edition</em></h1></center>
+  <body>
+<center><h1>All About Me:<em>Erica Edition</em></h1></center>
 <center><img src="http://bit.ly/2u1EQZr" style=width:200px;height:200px"></center>
       <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, walking or hiking to my next adventure. I love dogs and long walks on the beach.  </p>
-<center><h2 style="font-family:helvetica;">Things I Enjoy</h2></center>
+<center><h2>Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
         <li><small> Cats </small></li>
@@ -30,7 +37,7 @@
         <li><small> Korean Dramas </small></li>
       <li><small> Traveling </small></li>
       </ul>
-      <center><h2 style="font-family:helvetica;">What Grinds My Gears</h2></center>
+      <center><h3>What Grinds My Gears</h3></center>
       <ul>
         <li><small> When styrofoam is rubbed together </small></li>
         <li><small> Heights (Falling) </small></li>
@@ -49,7 +56,7 @@
   <li> When you come into class really late and the whole class stares at you </li>
   <li><small> When you microwave your soup and it's cold because you gotta mix it in between the intervals</small> </li>
       </ul>
-<center><h3 style="font-family:helvetica;">Websites I Enjoy To Go On (sometimes)</h3></center>
+<center><h3>Websites I Enjoy To Go On (sometimes)</h3></center>
             <ul>
         <li><a href="https://www.youtube.com">Youtube</a></li>
         <li><a href="https://www.netflix.com/browse">Netflix</a></li>
@@ -59,6 +66,6 @@
         <li><a href="https://www.pinterest.com">Pinterest</a></li>
         <li><a href="https://www.amazon.com">Amazon</a></li>
       </ul>
-  <p><center style="font-family:helvetica;"><strong>FUN FACT: I like tea!</strong></center></p>
+  <p><center><strong>FUN FACT: I like tea!</strong></center></p>
   </body>
 </html>
