--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@
       h2 {font-family:helvetica;}
       ul {font-family:helvetica;}
       h3 {font-family:helvetica;}
+    </style>
   </head>
   <body>
 <center><h1>All About Me:<em>Erica Edition</em></h1></center>
