--- a/aboutme.html
+++ b/aboutme.html
@@ -53,9 +53,9 @@
         <li><small> When people wear yellow </small></li>
           <li><small> Confrontation </small></li>
   <li><small> Rejection </small> </li>
-  <li> When you get ready for a shower but you hear someone else get in </li>
-  <li> When you come into class really late and the whole class stares at you </li>
-  <li><small> When you microwave your soup and it's cold because you gotta mix it in between the intervals</small> </li>
+  <li><small> When you get ready for a shower but you hear someone else get in </small></li>
+  <li><small> When you come into class really late and the whole class stares at you </small></li>
+  <li><small> When you microwave your soup and it's cold because you gotta mix it in between the intervals</small></li>
       </ul>
 <center><h3>Websites I Enjoy To Go On (sometimes)</h3></center>
             <ul>
