--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@
       h2 {font-family:helvetica;}
       ul {font-family:helvetica;}
       h3 {font-family:helvetica;}
+      p {font-family:helvetica;}
     </style>
   </head>
   <body>
