--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <head>
     <title>Explore Erica!</title>    
     <style>
-      body {background-color:lavender;}
+      body {background-color:light grey;}
       h1 {font-family:helvetica;}
       p {font-family:helvetica;}
       h2 {font-family:helvetica;}
