--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 <center><h1>All About Me:<em>Erica Edition</em></h1></center>
-<center><img src="http://bit.ly/2u1EQZr" style=width:200px;height:200px"></center>
+<center><img src="http://bit.ly/2u1EQZr" style= "width:200px; height:200px; border: #00008B 4px solid;"></center>
       <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, walking or hiking to my next adventure. I love dogs and long walks on the beach.  </p>
 <center><h2>Things I Enjoy</h2></center>
       <ul>
