--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
       h2 {font-family:helvetica;}
       ul {font-family:helvetica;}
       h3 {font-family:helvetica;}
-      p {font-family:helvetica;}
+      p2 {font-family:helvetica;}
     </style>
   </head>
   <body>
@@ -68,6 +68,6 @@
         <li><a href="https://www.pinterest.com">Pinterest</a></li>
         <li><a href="https://www.amazon.com">Amazon</a></li>
       </ul>
-  <p><center><strong>FUN FACT: I like tea!</strong></center></p>
+  <p2><center><strong>FUN FACT: I like tea!</strong></center></p2>
   </body>
 </html>
