--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,9 @@
     <title>Explore Erica!</title>    
     <style>
       body {background-color:grey;}
-      h1 {font-family:helvetica;}
+      h1 {font-family:helvetica;
+          font-size: 64px
+      }
       p {font-family:helvetica;}
       h2 {font-family:helvetica;}
       ul {font-family:helvetica;}
