--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,9 @@
       h1 {font-family:helvetica;
           font-size: 56px;
       }
-      p {font-family:helvetica;}
+      p {font-family:helvetica;
+         font-variant: small-caps;
+      }
       h2 {font-family:helvetica;}
       ul {font-family:helvetica;}
       h3 {font-family:helvetica;}
