--- a/aboutme.html
+++ b/aboutme.html
@@ -8,10 +8,12 @@
           font-size: 56px;
       }
       p {font-family:helvetica;
-         font-variant: small-caps;
+         font-variant:small-caps;
       }
       h2 {font-family:helvetica;}
-      ul {font-family:helvetica;}
+      ul {font-family:helvetica;
+          font-variant:small-caps;
+      }
       h3 {font-family:helvetica;}
       p2 {font-family:helvetica;}
     </style>
