--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@
       }
       p {font-family:helvetica;
          font-variant:small-caps;
+         text-indent:26px;
       }
       h2 {font-family:helvetica;}
       ul {font-family:helvetica;
@@ -74,6 +75,6 @@
         <li><a href="https://www.pinterest.com">Pinterest</a></li>
         <li><a href="https://www.amazon.com">Amazon</a></li>
       </ul>
-  <p2><center><strong>FUN FACT: I like tea!</strong></center></p2>
+  <p2><center><strong>FUN FACT: I LOVE TEA!</strong></center></p2>
   </body>
 </html>
