--- a/aboutme.html
+++ b/aboutme.html
@@ -64,6 +64,9 @@
   <li><small> When you get ready for a shower but you hear someone else get in </small></li>
   <li><small> When you come into class really late and the whole class stares at you </small></li>
   <li><small> When you microwave your soup and it's cold because you gotta mix it in between the intervals</small></li>
+        <li><small> Anxiety </small></li>
+        <li><small> When people blow things way out of proportion </small></li>
+        <li><small> When people say they're broke but they still have money</small></li>
       </ul>
 <center><h3>Websites I Enjoy To Go On (sometimes)</h3></center>
             <ul>
