--- a/aboutme.html
+++ b/aboutme.html
@@ -67,6 +67,8 @@
         <li><small> Anxiety </small></li>
         <li><small> When people blow things way out of proportion </small></li>
         <li><small> When people say they're broke but they still have money</small></li>
+        <li><small> When people point out my flaws </small></li>
+        
       </ul>
 <center><h3>Websites I Enjoy To Go On (sometimes)</h3></center>
             <ul>
