--- a/aboutme.html
+++ b/aboutme.html
@@ -1,23 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Explore Erica!</title>    
-    <style>
-      body {background-color:grey;}
-      h1 {font-family:helvetica;
-          font-size: 56px;
-      }
-      p {font-family:helvetica;
-         font-variant:small-caps;
-         text-indent:26px;
-      }
-      h2 {font-family:helvetica;}
-      ul {font-family:helvetica;
-          font-variant:small-caps;
-      }
-      h3 {font-family:helvetica;}
-      p2 {font-family:helvetica;}
-    </style>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <title>Explore Erica!</title> 
   </head>
   <body>
 <center><h1>All About Me:<em>Erica Edition</em></h1></center>
