--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://www.fontify.me/wf/7e8bb6e91946fdb31e5d9104a740ee5f" rel="stylesheet" type="text/css">
+    <link href="https://www.fontify.me/wf/7e8bb6e91946fdb31e5d9104a740ee5f" rel="stylesheet" type="text/css" href="style.css">
     <title>Explore Erica!</title> 
   </head>
   <body>
