--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,21 @@
     <title>Explore Erica!</title> 
   </head>
   <body>
-<center><h1>All About Me:<em>Erica Edition</em></h1></center>
+    <div>
+    <center><h1>All About Me:<em>Erica Edition</em></h1></center>
 <center><img src="http://bit.ly/2u1EQZr" style= "width:200px; height:200px; border: #000000 4px solid;"></center>
-      <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, walking or hiking to my next adventure. I love dogs and long walks on the beach.  </p>
+      <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
+        Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. 
+        <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, walking or hiking to
+        my next adventure. I love dogs and long walks on the beach.  </p>
+       <div style ="overflow-x:auto;">
+      <table style="width:90%; margin:1em auto">
+        <tr>
+          <th>Core4 Concept</th>
+          <th>Technical Definition</th>
+        </tr>
+         </table>
+      </div>
 <center><h2>Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
@@ -67,5 +79,6 @@
         <li><a href="https://www.amazon.com">Amazon</a></li>
       </ul>
   <p2><center><strong>FUN FACT: I LOVE TEA!</strong></center></p2>
-  </body>
+    </div>
+      </body>
 </html>
