--- a/aboutme.html
+++ b/aboutme.html
@@ -16,12 +16,7 @@
        <div style ="overflow-x:auto;">
       <table style="width:90%; margin:1em auto">
         <tr>
-          <th>Core4 Concept</th>
-          <th>Technical Definition</th>
-        </tr>
-         </table>
-      </div>
-<center><h2>Things I Enjoy</h2></center>
+          <th> <center><h2>Things I Enjoy</h2></center>
       <ul>
         <li><small> Dogs </small></li>
         <li><small> Cats </small></li>
@@ -44,8 +39,10 @@
         <li><small> Korean Dramas </small></li>
       <li><small> Traveling </small></li>
       </ul>
-      <center><h3>What Grinds My Gears</h3></center>
-      <ul>
+          </th>
+          <th>
+  <center><h3>What Grinds My Gears</h3></center>
+            <ul>
         <li><small> When styrofoam is rubbed together </small></li>
         <li><small> Heights (Falling) </small></li>
         <li><small> Scary movies </small></li>
@@ -65,9 +62,12 @@
         <li><small> Anxiety </small></li>
         <li><small> When people blow things way out of proportion </small></li>
         <li><small> When people say they're broke but they still have money</small></li>
-        <li><small> When people point out my flaws </small></li>
-        
-      </ul>
+              <li><small> When people point out my flaws </small></li>
+            </ul>
+          </th>
+        </tr>
+         </table>
+      </div>
 <center><h3>Websites I Enjoy To Go On (sometimes)</h3></center>
             <ul>
         <li><a href="https://www.youtube.com">Youtube</a></li>
