--- a/aboutme.html
+++ b/aboutme.html
@@ -13,6 +13,7 @@
         Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. 
         <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, walking or hiking to
         my next adventure. I love dogs and long walks on the beach.  </p>
+    </div>
        <div style ="overflow-x:auto;">
       <table style="width:90%; margin:1em auto">
         <tr>
