--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
   <body>
     <div>
     <center><h1>All About Me:<em>Erica Edition</em></h1></center>
-<center><img src="https://bit.ly/2u1EQZr" style= "width:400px; height:400px; border: #000000 4px solid;"></center>
+<div><center><img src="https://bit.ly/2u1EQZr" style= "width:400px; height:400px; border: #000000 4px solid;"></center></div>
       <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
         Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. 
         <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, walking or hiking to
