--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     <center><h1>All About Me:<em>Erica Edition</em></h1></center>
 <center></center>
   <div class="polaroid">
-  <img src="https://bit.ly/2u1EQZr" style= "width:200px; height:200px;">
+  <center><img src="https://bit.ly/2u1EQZr" style= "width:200px; height:200px;"></center>
   <div class="container">
       <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
         Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. 
