--- a/aboutme.html
+++ b/aboutme.html
@@ -3,15 +3,32 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://www.fontify.me/wf/7e8bb6e91946fdb31e5d9104a740ee5f" rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Explore Erica!</title> 
   </head>
   <body>
+    <!-- Page Content -->
+<div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
+
+<div>
+  <button class="w3-button w3-white w3-xxlarge" onclick="w3_open()">&#9776;</button>
+  <div class="w3-container">
+  </div>
+</div>  
+    <script>
+function w3_open() {
+    document.getElementById("mySidebar").style.display = "block";
+    document.getElementById("myOverlay").style.display = "block";
+}
+function w3_close() {
+    document.getElementById("mySidebar").style.display = "none";
+    document.getElementById("myOverlay").style.display = "none";
+}
+</script>
     <div>
     <center><h1>All About Me:<em>Erica Edition</em></h1></center>
-<center></center>
-  <div class="polaroid">
   <center><img src="https://bit.ly/2u1EQZr" style= "width:200px; height:200px;"></center>
-  <div class="container">
       <p> Hi! My name is Erica Ramos Eisenman and I am Filipino and German! I'm an incoming senior at Castro Valley High School. 
         Some might say that I'm crazy, wild, and fun and others might say that I'm quiet, reserved, and shy. 
         <em>Many</em> people interpret me in <em>many</em> ways. You can either find me singing, sleeping, eating, walking or hiking to
