--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,15 @@
     <title>Explore Erica!</title> 
   </head>
   <body>
+    <div class="w3-sidebar w3-bar-block w3-white w3-animate-left" style="display:none;z-index:4" id="mySidebar">
+  <button class="w3-bar-item w3-button" onclick="w3_close()">Close</button>
+  <a href="#" class="w3-bar-item w3-button">Link 1</a> 
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+</div>
+
+<!-- Overlay -->
+<div class="w3-overlay" onclick="w3_close()" style="cursor:pointer"></div>
     <!-- Page Content -->
 <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
