--- a/aboutme.html
+++ b/aboutme.html
@@ -10,8 +10,8 @@
   <body>
     <div class="w3-sidebar w3-bar-block w3-white w3-animate-left" style="display:none;z-index:4" id="mySidebar">
   <button class="w3-bar-item w3-button" onclick="w3_close()">Close</button>
-  <a href="#" class="w3-bar-item w3-button">Link 1</a> 
-  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="eeisenman.io/portfolio/aboutme.html" class="w3-bar-item w3-button">Home</a> 
+  <a href="#" class="w3-bar-item w3-button"></a>
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
 </div>
 
